<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="Notification_preference"
        android:title="Daily Notifications"
        android:summary="Turn on to receive daily notifications"
        />
    <ListPreference
        android:defaultValue="StateName"
        android:entries="@array/sorting_methods_names"
        android:entryValues="@array/sorting_methods_values"
        android:title="Sort By"
        android:key="Sort_Preference"
        />


    <androidx.preference.ListPreference
        android:defaultValue="@string/pref_night_auto"
        android:dialogTitle="@string/pref_night_dialog"
        android:entries="@array/night_mode"
        android:entryValues="@array/night_mode_value"
        android:key="@string/pref_key_night"
        android:summary="@string/pref_night_summary"
        android:title="@string/pref_night_title" />
</PreferenceScreen>