<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.addActivity"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_new_state"
        android:textSize="30sp"
        android:padding="20dp"
        />
   <EditText
       android:id="@+id/stateET"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/state_name"
       android:layout_margin="15dp"
       android:paddingStart="15dp"
       tools:ignore="Autofill,RtlSymmetry"
       android:inputType="text" />
    <EditText
        android:id="@+id/capitalET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/capital_name"
        android:layout_margin="15dp"
        android:paddingStart="15dp"
        tools:ignore="Autofill,RtlSymmetry"
        android:inputType="text" />

    <Button
        android:id="@+id/addState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/add"
        />
</LinearLayout>